--- a/online-library-management-system/appsettings.json
+++ b/online-library-management-system/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"DefaultConnection": "User Id=SYS;Password=Password1234;Data Source=localhost:1521/lms;DBA Privilege=SYSDBA"
+    "DefaultConnection": "Server=localhost,1433;Initial Catalog=lms;User Id=SA;Password=MyStrongPass123; TrustServerCertificate=True"
+  }
+
 }
 
