--- a/online-library-management-system/online-library-management-system.csproj
+++ b/online-library-management-system/online-library-management-system.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.7" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Services\" />
