fix Authors and Artists

--- a/online-library-management-system/online-library-management-system.csproj
+++ b/online-library-management-system/online-library-management-system.csproj
@@ -32,8 +32,8 @@
     <None Remove="Areas\Admin\Views\Category\" />
     <None Remove="Areas\Admin\Views\Inventory\" />
     <None Remove="Areas\Admin\Views\Lending\" />
-    <None Remove="Areas\Admin\Views\Contributor\" />
     <None Remove="Areas\Admin\Views\Messages\" />
+    <None Remove="Areas\Admin\Views\AuthorAndArtist\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -44,7 +44,7 @@
     <Folder Include="Areas\Admin\Views\Category\" />
     <Folder Include="Areas\Admin\Views\Inventory\" />
     <Folder Include="Areas\Admin\Views\Lending\" />
-    <Folder Include="Areas\Admin\Views\Contributor\" />
     <Folder Include="Areas\Admin\Views\Messages\" />
+    <Folder Include="Areas\Admin\Views\AuthorAndArtist\" />
   </ItemGroup>
 </Project>
