--- a/online-library-management-system/online-library-management-system.csproj
+++ b/online-library-management-system/online-library-management-system.csproj
@@ -30,7 +30,7 @@
     <None Remove="Views\Admin\" />
     <None Remove="Views\Contact\" />
     <None Remove="Areas\Admin\Views\Category\" />
-    <None Remove="Areas\Admin\Views\Inventory\" />
+    <None Remove="Areas\Admin\Views\Item\" />
     <None Remove="Areas\Admin\Views\Lending\" />
     <None Remove="Areas\Admin\Views\Messages\" />
     <None Remove="Areas\Admin\Views\AuthorAndArtist\" />
@@ -42,7 +42,7 @@
     <Folder Include="Views\Admin\" />
     <Folder Include="Views\Contact\" />
     <Folder Include="Areas\Admin\Views\Category\" />
-    <Folder Include="Areas\Admin\Views\Inventory\" />
+    <Folder Include="Areas\Admin\Views\Item\" />
     <Folder Include="Areas\Admin\Views\Lending\" />
     <Folder Include="Areas\Admin\Views\Messages\" />
     <Folder Include="Areas\Admin\Views\AuthorAndArtist\" />
